CICO-9288 fixing room verification text alignment

--- a/guestweb/css/less/huntley.less
+++ b/guestweb/css/less/huntley.less
@@ -189,7 +189,9 @@ border-bottom:1px solid;
 .balance-sub-text{
 	text-align: center !important;
 }
-     
+.room-instruction{   
+   word-wrap: break-word;  
+ }
 
 @media screen and (max-width: 900px) {
  	.pre-checkin-container-padding{
@@ -209,6 +211,9 @@ border-bottom:1px solid;
 	}
 	.lightcontent.chekout-time.balance-sub-text{
 		font-size: 12px !important;
+	}
+	.room-instruction{
+		padding-top:0% !important;
 	}
 }
 
